--- a/er/8-contexts.adoc
+++ b/er/8-contexts.adoc
@@ -7,7 +7,7 @@ An important goal of the ELFIE was "adoptability" by web developers and compatib
 
 Initial ELFIE discussions of the graph view concept used the https://www.w3.org/TR/shacl/[Shapes Constraint Language SHACL] technology as the logical implementation. Further evaluation and consideration of the ELFIE goals regarding adoptability and ubiquity, the https://www.w3.org/TR/json-ld/#the-context[JSON-LD context] was chosen as the most appropriate technical solution to express the graph _views_. The ELFIE contexts are meant to be precise descriptions of what the IE found to be the most appropriate linked data properties (attributes and relations) and types. They are not intended to be used as a schema to specify or validate the contents of a given document. However, they could provide a useful set of aliases for the subset of types and properties that could be expected to be parsed and interpreted by the client.
 
-From a practical perspective, the contexts provide clear guidelines for what properties and types to use while not being overly prescriptive, limiting, or difficult to use in a typical web development workflow. Unlike _schemas_, such contexts support the “Open World Assumption” where missing elements simply indicate that this information is not currently available to the data provider, without the burden (and potential for misuse) of stating a placeholder value.
+From a practical perspective, the contexts provide clear guidelines for what properties and types to use while not being overly prescriptive, limiting, or difficult to use in a typical web development workflow. Unlike _schemas_, such contexts support the “Open World Assumption” where missing elements simply indicate that this information is not currently available to the data provider, without the burden (and potential for misuse) of stating a placeholder value. Furthermore, for simplifying the use of the contexts and reduce the number of possible errors while parsing the _views_, https://w3c.github.io/json-ld-syntax/#type-coercion[Type Coercion] was not used while aliasing properties in the contexts files. 
 
 More information about the design and engineering of ELFIE contexts can be found on the https://opengeospatial.github.io/ELFIE/json-ld/[ELFIE web page]. Note that the discussion and examples there is not in direct reference to the use cases used for discussion and testing of the IE.
 
