--- a/er/2-references.adoc
+++ b/er/2-references.adoc
@@ -23,4 +23,8 @@ The following normative documents are referenced in this document.
 
 * https://www.iso.org/standard/32574.html[ISO 19156:2011, Geographic information -- Observations and measurements]
 
-* https://www.w3.org/TR/sdw-bp/[W3C Working Group Note 28 September 2017 - Spatial Data on the Web Best Practices] 
+* https://www.w3.org/TR/sdw-bp/[W3C Working Group Note 28 September 2017 -- Spatial Data on the Web Best Practices] 
+
+* https://www.w3.org/TR/dwbp/[W3C Recommendation 31 January 2017 -- Data on the Web Best Practices]
+
+* https://www.w3.org/TR/ld-bp/[W3C Working Group Note 09 January 2014 -- Best Practices for Publishing Linked Data]
